workspace = { members = ["tool"] }
[package]
name = "show_chars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1"
fltk-table = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "2"


[build-dependencies]
fl2rust = "0"
