#workspace = { members = ["tool"] }
[package]
name = "show_chars"
version = "0.1.0"
rust-version = "1.70.0"
edition = "2021"
description = "This is a manual application that assists in the development process of FLTK."
keywords = ["fltk", "unicode", "ascii", "emoji", "ansi"]
categories = ["gui"]
authors = ["t1000ln <t1000_ln@aliyun.com>"]
repository = "https://github.com/t1000ln/show_chars"
exclude = [".github", ".gitignore", "src/resource/NotoColorEmoji.ttf"]
homepage = "https://easymud.net/show_chars"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1"
fltk-table = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "2"

[build-dependencies]
fl2rust = "0"
